Various updates to GUI version